# Aayu

./: .dockerignore  .env.example  .gitignore  Design_System.md  Makefile  PRD.md  README.md  docker-compose.yml  plan.md
apps/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/backend/grounding/index/: chunks.json
apps/backend/grounding/irdai/: cio-complaint-flow.md  cio-ombudsman-offices.md  cio-specimen-complaint-form.docx  irdai-consumer-affairs-booklets.md  irdai-grievance-cell-ppgr-faq.md  manifest.json
apps/backend/grounding/irdai/extracted/: cio-ombudsman-amendment-rules-2023.txt  cio-ombudsman-rules-2017-amended-2023.txt  cio-specimen-complaint-form.txt  irdai-ayush-coverage-guidelines.txt  irdai-health-insurance-regulations-2016.txt  irdai-insurance-products-regulations-2024.txt  irdai-ombudsman.txt  irdai-policyholder-complaint-form.txt  irdai-ppgr-functions.txt  irdai-protection-of-policyholders-2024.txt  irdai-pwd-hiv-aids-mental-illness-product-modification.txt  (+1 more)
apps/backend/migrations/: env.py  script.py.mako
apps/backend/migrations/versions/: 20260716_01_foundation.py  20260717_02_patient_profile.py
apps/backend/scripts/: build_knowledge_index.py
apps/backend/src/aayu/: __init__.py  auth.py  claim_references.py  config.py  database.py  grounding.py  main.py  models.py  policy_chat.py  processing.py  queue.py  schemas.py  scheme_rules.py  schemes.py  storage.py
apps/backend/tests/: conftest.py  test_claim_references.py  test_config.py  test_grounding.py  test_hero_flow.py  test_policy_chat.py  test_scheme_matches.py
(+151 files in other folders)
